footer fix on mobile

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -72,7 +72,7 @@
       display: flex;
       align-items: center;
       @media only screen and (max-width: $mobileMedium) {
-        width: 7rem;
+        // width: 7rem;
       }
     }
 
